Aca cambie los colores y trabaje en la parte RESPONSIVA

--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,40 @@
 *, a, ul, li {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   text-decoration: none;
   list-style: none;
 }
 
-.video-wrapper {
-  z-index: -1;
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
-  overflow: hidden;
-}
-.video-wrapper .video {
-  position: absolute;
-  top: 0;
-}
-
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 100vh;
-  background: #1f2443;
+  background: #1a1b40;
+  align-items: center;
+  justify-content: center;
   /*FRONT CONTAINER*/
 }
 .container .container_Info {
   padding: 0.5em;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
-  background: #1f2443;
+  background: #1A1B40;
+}
+@media screen and (max-width: 480px) {
+  .container .container_Info {
+    height: 20%;
+  }
 }
 .container .container_Info .container_Info_Box {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   position: relative;
 }
 .container .container_Info .container_Info_Box .container_info_box_tititle {
@@ -80,9 +48,9 @@
   width: 100%;
   font-size: 6em;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .container .container_Info .container_Info_Box .container_info_box_tititle {
-    font-size: 2em;
+    font-size: 2.1em;
   }
 }
 .container .container_Info .container_Info_Box .container_info_box_Description {
@@ -96,7 +64,6 @@
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link {
   font-size: 2em;
   color: #5ce86c;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   position: relative;
   padding: 0.2em 0;
@@ -111,11 +78,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link:hover::after {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   width: 100%;
 }
@@ -139,6 +104,7 @@
   .container .container_img_center {
     width: 150px;
     height: 150px;
+    top: 0%;
   }
 }
 @media screen and (max-width: 320px) {
@@ -150,25 +116,16 @@
 .container .container_ShowCategories {
   width: 100%;
   height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-end;
+  align-items: center;
   /*background-image: url("../img/colors.jpg");
   background-size: 100%;
   background-position: center;*/
 }
 @media screen and (max-width: 768px) {
   .container .container_ShowCategories {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
 .container .container_ShowCategories .container_ShowCategories_Bttn-M {
@@ -181,7 +138,7 @@
   font-weight: bold;
   cursor: default;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .container .container_ShowCategories .container_ShowCategories_Bttn-M {
     font-size: 1em;
   }
@@ -199,19 +156,20 @@
   position: relative;
   margin: auto;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .container .container_ShowCategories .container_ShowCategories_Bttn {
-    font-size: 1em;
+    font-size: 1.5em;
   }
 }
 
 .container_Categories {
   z-index: -100;
+  height: 100vh;
   visibility: hidden;
-  opacity: 1;
+  opacity: 0;
   overflow: hidden;
   width: 100%;
-  background: #1f2443;
+  background: #1A1B40;
   position: absolute;
   top: 0;
   left: 0;
@@ -226,20 +184,14 @@
 }
 .container_Categories .container_Categories_BTTClose {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   height: 7ch;
   color: white;
   font-family: century gothic;
   cursor: pointer;
+  position: -webkit-sticky;
   position: sticky;
   z-index: 100;
   top: 0;
@@ -251,37 +203,34 @@
 }
 .container_Categories .container_Categories_display {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 1em;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content {
   position: relative;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content:hover .container_Categories_display_Content_IO {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  -webkit-filter: brightness(35%);
-          filter: brightness(35%);
+  transform: scale(0.9);
+  filter: brightness(35%);
 }
 .container_Categories .container_Categories_display .container_Categories_display_content:hover .container_Categories_display_Content_IO_Titles {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   opacity: 1;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO {
   width: 270px;
   height: 270px;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+@media screen and (max-width: 480px) {
+  .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO {
+    width: 175px;
+    height: 175px;
+    margin-top: 2.1em;
+  }
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO_Titles {
   font-family: Advent Pro, helvetica;
@@ -290,15 +239,9 @@
   opacity: 0;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   color: white;
   position: absolute;
   font-size: 2em;
@@ -307,7 +250,12 @@
   left: 0;
   right: 0;
   margin: auto;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: #fffb00;
+}
+@media screen and (max-width: 480px) {
+  .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO_Titles {
+    opacity: 1;
+    top: 105%;
+  }
 }
