--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,28 +3,15 @@
 @use 'components/colors' as *;
 @use 'components/mixins' as *;
 
-.video-wrapper{
-	z-index: -1;
-	width: 100%;
-	height: 100vh;
-	position: absolute;
-	text-align: center;
-	display: flex;
-  	align-items: center;
-  	justify-content: right;
-  	overflow: hidden;
-	.video{
-		position: absolute;
-		top: 0;
-
-	}
-}
 .container{
 	display: flex;
 	position: relative;
 	flex-direction: column;
 	height: 100vh;
 	background:opacify($lightblue, 0%);
+	align-items: center;
+	justify-content: center;
+
 	.container_Info{
 		padding: .5em;
 		width: 100%;
@@ -32,6 +19,9 @@
 		display: flex;
 		position: relative;
 		background: $lightblue;
+		@media screen and (max-width: 480px) {
+			height: 20%;
+		}
 		.container_Info_Box{
 			width: 100%;
 			display: flex;
@@ -47,8 +37,8 @@
 				color: white;
 				width: 100%;
 				font-size: 6em;
-				@media screen and (max-width: 320px) {
-					font-size: 2em;
+				@media screen and (max-width: 480px) {
+					font-size: 2.1em;
 				}
 			}
 			.container_info_box_Description{
@@ -96,6 +86,7 @@
 		}@media screen and (max-width: 425px) {
 			width: 150px;
 			height: 150px;
+			top: 0%;
 		}@media screen and (max-width: 320px) {
 			width: 125px;
 			height: 125px;
@@ -119,7 +110,7 @@
 			color: white;
 			font-weight: bold;
 			cursor: default;
-			@media screen and (max-width: 320px) {
+			@media screen and (max-width: 480px) {
 				font-size: 1em;
 
 			}
@@ -133,8 +124,8 @@
 			cursor: default;
 			position: relative;
 			margin: auto;
-			@media screen and (max-width: 320px) {
-				font-size: 1em;
+			@media screen and (max-width: 480px) {
+				font-size: 1.5em;
 
 			}
 			
@@ -143,8 +134,9 @@
 }
 .container_Categories{
 	z-index: -100;
+	height: 100vh;
 	visibility: hidden;
-	opacity: 1;
+	opacity: 0;
 	overflow: hidden;
 	width: 100%;
 	background: $lightblue;
@@ -200,6 +192,11 @@
 				width: 270px;
 				height: 270px;
 				transition: .5s;
+				@media screen and (max-width: 480px) {
+					width: 175px;
+					height: 175px;
+					margin-top: 2.1em;
+				}
 			}
 			.container_Categories_display_Content_IO_Titles{
 				@include titles;
@@ -219,6 +216,10 @@
 				margin: auto;
 				transition: .5s;
 				color: $secondarybackground;
+				@media screen and (max-width: 480px) {
+					opacity: 1;
+					top: 105%;
+				}
 			}
 		}
 		
