--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,11 @@
 @use 'components/fonts' as *;
 @use 'components/colors' as *;
 @use 'components/mixins' as *;
-
+body{
+	@media screen and (max-width: 480px) {
+		overflow-y: hidden;
+	}
+}
 .container{
 	display: flex;
 	position: relative;
@@ -11,11 +15,10 @@
 	background:opacify($lightblue, 0%);
 	align-items: center;
 	justify-content: center;
-
 	.container_Info{
-		padding: .5em;
-		width: 100%;
-		height: 100%;
+		width: 70%;
+		text-align: left;
+		height: 50%;
 		display: flex;
 		position: relative;
 		background: $lightblue;
@@ -36,21 +39,23 @@
 				font-weight: normal;
 				color: white;
 				width: 100%;
-				font-size: 6em;
+				font-size: 4.7em;
 				@media screen and (max-width: 480px) {
-					font-size: 2.1em;
+					font-size: 3.7em;
 				}
 			}
 			.container_info_box_Description{
 				width: 100%;
 				color: white;
 				@include text;
+				font-size: 1.2em;
+				padding: 0;
 				.container_info_box_Description_link{
-					font-size: 2em;
+					font-size: 2.5em;
 					color: $green;
 					transition: .5s;
 					position: relative;
-					padding:.2em 0;
+					padding:0;
 					&:after{
 						content: '';
 						background:$green;
@@ -67,7 +72,9 @@
 						transition: .5s;
 						width: 100%;
 					}
-
+					@media screen and (max-width: 480px) {
+							font-size: 2em;
+					}
 				}
 			}
 		}
@@ -79,30 +86,28 @@
 		right: 0;
 		bottom: 40%;
 		margin: auto;
-		@media screen and (max-width: 768px) {
-			width: 200px;
-			height: 200px;
-			bottom: 55%;
-		}@media screen and (max-width: 425px) {
-			width: 150px;
-			height: 150px;
-			top: 0%;
-		}@media screen and (max-width: 320px) {
-			width: 125px;
-			height: 125px;
+		@media screen and (max-width: 600px) {
+			width: 190px;
+			height: 190px;
+			bottom: 40%;
+		}
+		@media screen and (max-width: 480px) {
+			width: 135px;
+			height: 135px;
+			top: 0;
 		}	
 	}
 	.container_ShowCategories{
 		width: 100%;
-		height: 400px;
+		height: 200px;
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
-		/*background-image: url("../img/colors.jpg");
-		background-size: 100%;
-		background-position: center;*/
 		@media screen and (max-width: 768px) {
 			flex-direction: column;
+		}
+		@media screen and (max-width: 480px) {
+			margin-top: 20%;
 		}
 		.container_ShowCategories_Bttn-M{
 			@include text;
@@ -110,23 +115,22 @@
 			color: white;
 			font-weight: bold;
 			cursor: default;
+			padding: 0;
 			@media screen and (max-width: 480px) {
 				font-size: 1em;
-
 			}
 		}
 		.container_ShowCategories_Bttn{
 			@include text;
 			text-transform: uppercase;
-			font-size: 2em;
+			font-size: 2.2em;
 			color: $green;
 			font-weight: bold;
 			cursor: default;
 			position: relative;
 			margin: auto;
-			@media screen and (max-width: 480px) {
+			@media screen and (max-width: 600px) {
 				font-size: 1.5em;
-
 			}
 			
 		}
@@ -149,7 +153,6 @@
 		overflow: auto;
 		visibility: visible;
 	}
-
 	.container_Categories_BTTClose{
 		width: 100%;
 		display: flex;
@@ -167,7 +170,6 @@
 		right: 0;
 		font-size: .8em;
 		padding: 0 1em;
-
 	}
 	.container_Categories_display{
 		width: 100%;
@@ -176,13 +178,11 @@
 		justify-content: center;
 		padding: 1em;
 		.container_Categories_display_content{
-			position: relative;
-			
+			position: relative;			
 			&:hover .container_Categories_display_Content_IO{
 				transition: .5s;
 				transform: scale(.9);
 				filter: brightness(35%);
-
 			}
 			&:hover .container_Categories_display_Content_IO_Titles{
 				transition: .5s;
