--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,6 +123,7 @@ body{
 		}
 		.container_ShowCategories_Bttn{
 			@include text;
+			z-index: 100;
 			text-transform: uppercase;
 			font-size: 2.2em;
 			color: $green;
