--- a/scss/components/colors.scss
+++ b/scss/components/colors.scss
@@ -1,4 +1,4 @@
 $mainbackground: #354c72;
 $secondarybackground: #fffb00;
-$lightblue: #1A1B40;
-$green: #5ce86c;
+$lightblue: #1A1B40;//1A1B40
+$green: #287c2c;
