--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,15 @@
 @use 'components/fonts' as *;
 @use 'components/colors' as *;
 @use 'components/mixins' as *;
+
+@keyframes Shake {
+	0%{translate:-10px;}
+	25%{translate:10px;}
+	50%{translate:-5px;}
+	75%{translate:5px;}
+	100%{translate:0px;}
+}
 body{
-	background: #000;
 	@media screen and (max-width: 480px) {
 		overflow-y: hidden;
 	}
@@ -139,24 +146,28 @@ body{
 	}/*FRONT CONTAINER*/
 }
 .container_Categories{
-	z-index: -100;
-	height: 100vh;
-	visibility: hidden;
-	opacity: 0;
-	overflow: hidden;
+	z-index: 100;
 	width: 100%;
 	background: $lightblue;
-	position: absolute;
 	top: 0;
-	left: 0;
 	right: 0;
 	bottom: 0;
-	@media screen and (max-width: 768px) {
-		overflow: auto;
-		visibility: visible;
+	translate: -100%;
+	position: absolute;		
+	overflow-y: auto;
+	justify-content: flex-start;
+	&::-webkit-scrollbar{
+		width: .7em;
+	}	
+	&::-webkit-scrollbar-track{
+		background: darken($lightblue, 10%);
+	}
+	&::-webkit-scrollbar-thumb{
+		background: lighten($lightblue, 15%);
 	}
 	.container_Categories_BTTClose{
 		width: 100%;
+
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -172,56 +183,53 @@ body{
 		right: 0;
 		font-size: .8em;
 		padding: 0 1em;
+		background: $lightblue;
+		text-align: center;
 	}
 	.container_Categories_display{
 		width: 100%;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: auto; 
+
+		position: relative;
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: center;
-		padding: 1em;
 		.container_Categories_display_content{
-			position: relative;			
-			&:hover .container_Categories_display_Content_IO{
-				transition: .5s;
-				transform: scale(.9);
-				filter: brightness(35%);
-			}
-			&:hover .container_Categories_display_Content_IO_Titles{
-				transition: .5s;
-				opacity: 1;
-			}
+			position: relative;		
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;	
+			flex-wrap: wrap;
+			
 			.container_Categories_display_Content_IO{
-				width: 270px;
-				height: 270px;
 				transition: .5s;
+				width: 165px;
+				height: 165px;
+				
 				@media screen and (max-width: 480px) {
-					width: 175px;
-					height: 175px;
-					margin-top: 2.1em;
+					width: 125px;
+					height: 125px;
 				}
 			}
 			.container_Categories_display_Content_IO_Titles{
 				@include titles;
-				opacity: 0;
 				width: 100%;
-				height: 100%;
+
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				color: white;
-				position: absolute;
 				font-size: 2em;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
 				margin: auto;
 				transition: .5s;
 				color: $secondarybackground;
-				@media screen and (max-width: 480px) {
-					opacity: 1;
-					top: 105%;
+				&:hover{
+					animation: Shake .5s;
+					animation-timing-function: cubic-bezier(.48,1.01,.56,1.16);
 				}
+
 			}
 		}
 		
