--- a/scss/components/colors.scss
+++ b/scss/components/colors.scss
@@ -1,4 +1,4 @@
 $mainbackground: #354c72;
 $secondarybackground: #fffb00;
 $lightblue: #1A1B40;//1A1B40
-$green: #287c2c;
+$green: #32db4a;//;287c2c
