Agregue el ´preambulo para las demas categorias

--- a/scss/components/reset.scss
+++ b/scss/components/reset.scss
@@ -4,4 +4,6 @@
 	box-sizing: border-box;
 	text-decoration: none;
 	list-style: none;
+	font-family: century Gothic, san-serif;
+	font-weight: normal;
 }
