--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,11 @@
 *, a, ul, li {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-}
-
-@-webkit-keyframes Shake {
-  0% {
-    translate: -10px;
-  }
-  25% {
-    translate: 10px;
-  }
-  50% {
-    translate: -5px;
-  }
-  75% {
-    translate: 5px;
-  }
-  100% {
-    translate: 0px;
-  }
+  font-family: century Gothic, san-serif;
+  font-weight: normal;
 }
 
 @keyframes Shake {
@@ -42,37 +25,20 @@
     translate: 0px;
   }
 }
-@media screen and (max-width: 480px) {
-  body {
-    overflow-y: hidden;
-  }
-}
-
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 100vh;
   background: #1a1b40;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   /*FRONT CONTAINER*/
 }
 .container .container_Info {
   width: 70%;
   text-align: left;
   height: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
   background: #1A1B40;
@@ -84,19 +50,10 @@
 }
 .container .container_Info .container_Info_Box {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   position: relative;
 }
 .container .container_Info .container_Info_Box .container_info_box_tititle {
@@ -108,7 +65,7 @@
   font-weight: normal;
   color: white;
   width: 100%;
-  font-size: 4.7em;
+  font-size: 4.1em;
 }
 @media screen and (max-width: 480px) {
   .container .container_Info .container_Info_Box .container_info_box_tititle {
@@ -126,9 +83,8 @@
   padding: 0;
 }
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link {
-  font-size: 2.5em;
+  font-size: 2.1em;
   color: #32db4a;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   position: relative;
   padding: 0;
@@ -143,11 +99,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link:hover::after {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   width: 100%;
 }
@@ -182,22 +136,13 @@
 .container .container_ShowCategories {
   width: 100%;
   height: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-end;
+  align-items: center;
 }
 @media screen and (max-width: 768px) {
   .container .container_ShowCategories {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
 @media screen and (max-width: 480px) {
@@ -210,7 +155,7 @@
   font-size: 1em;
   padding: 0.5em;
   font-weight: normal;
-  font-size: 2.2em;
+  font-size: 1.7em;
   color: white;
   font-weight: bold;
   cursor: default;
@@ -228,7 +173,7 @@
   font-weight: normal;
   z-index: 100;
   text-transform: uppercase;
-  font-size: 2.2em;
+  font-size: 1.7em;
   color: #32db4a;
   font-weight: bold;
   cursor: default;
@@ -250,26 +195,17 @@
   bottom: 0;
   translate: -100%;
   position: absolute;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
 }
 .container_Categories .container_Categories_BTTClose {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   height: 7ch;
   color: white;
   font-family: century gothic;
   cursor: pointer;
+  position: -webkit-sticky;
   position: sticky;
   z-index: 100;
   top: 0;
@@ -277,49 +213,32 @@
   left: 0;
   right: 0;
   font-size: 0.8em;
-  padding: 0 1em;
+  padding: 0 0.5em;
   background: #1A1B40;
   text-align: center;
 }
 .container_Categories .container_Categories_display {
   width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin-bottom: auto;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content {
+  padding: 0.5em;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
-  width: 175px;
-  height: 175px;
+  width: 150px;
+  height: 150px;
 }
 @media screen and (max-width: 480px) {
   .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO {
@@ -332,25 +251,147 @@
   font-size: 3em;
   padding: 0.5em;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   color: white;
   font-size: 2em;
   margin: auto;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: #fffb00;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO_Titles:hover {
-  -webkit-animation: Shake 0.5s;
-          animation: Shake 0.5s;
-  -webkit-animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
-          animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
+  animation: Shake 0.5s;
+  animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
+}
+
+.header {
+  width: 100%;
+  background: #1A1B40;
+  text-align: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+.header .header_title {
+  font-family: Advent Pro, helvetica;
+  font-size: 3em;
+  padding: 0.5em;
+  font-size: 2em;
+  color: white;
+  margin-right: auto;
+  font-variant: small-caps;
+}
+@media screen and (max-width: 480px) {
+  .header .header_title {
+    font-size: 1.4em;
+  }
+}
+.header .titles_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #32db4a;
+}
+.header .titles_container .titles_container_title {
+  margin-right: auto;
+}
+.header .titles_container .titles_container_backlink {
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  font-variant: small-caps;
+  background: #1A1B40;
+  color: white;
+  cursor: default;
+}
+.header .titles_container .titles_container_title {
+  text-align: center;
+  color: #1A1B40;
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  font-variant: small-caps;
+  cursor: default;
+}
+
+.container_products {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  background: #1A1B40;
+}
+.container_products .container_products_content {
+  background: white;
+  position: relative;
+  height: 285px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.2em;
+  border-bottom: 10px solid #32db4a;
+}
+@media screen and (max-width: 480px) {
+  .container_products .container_products_content {
+    width: calc(50% - 1em);
+    height: 285px;
+  }
+}
+.container_products .container_products_content .container_products_content_img {
+  width: 50%;
+  height: 50%;
+  position: relative;
+}
+.container_products .container_products_content .container_products_content_info {
+  padding: 0 0.5em;
+  margin: 0.5em;
+}
+.container_products .container_products_content .container_products_content_info .container_products_content_infotitle {
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  font-size: 1.2em;
+  padding: 0;
+  font-variant: all-small-caps;
+}
+.container_products .container_products_content .container_products_content_info .container_products_content_infoDescription {
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  padding: 0;
+  font-variant: all-small-caps;
+  font-size: 1em;
+}
+.container_products .container_products_content .container_products_content_info .container_products_content_infoDescription_Exeptions {
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  padding: 0;
+  font-variant: all-small-caps;
+  font-size: 0.9em;
+  color: red;
+}
+.container_products .container_products_content .container_products_content_info .container_products_content_info_price {
+  font-family: Advent Pro, Century Gothic;
+  font-size: 1em;
+  padding: 0.5em;
+  font-weight: normal;
+  padding: 0.2em;
+  font-size: 1.5em;
+  font-variant: small-caps;
+  text-align: center;
+  background: #1A1B40;
+  color: white;
+  width: 50%;
+  margin-left: auto;
 }
