--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,11 +10,8 @@
 	75%{translate:5px;}
 	100%{translate:0px;}
 }
-body{
-	@media screen and (max-width: 480px) {
-		overflow-y: hidden;
-	}
-}
+
+///////////////////////////////////
 .container{
 	display: flex;
 	position: relative;
@@ -47,7 +44,7 @@ body{
 				font-weight: normal;
 				color: white;
 				width: 100%;
-				font-size: 4.7em;
+				font-size: 4.1em;
 				@media screen and (max-width: 480px) {
 					font-size: 3.7em;
 				}
@@ -59,7 +56,7 @@ body{
 				font-size: 1.2em;
 				padding: 0;
 				.container_info_box_Description_link{
-					font-size: 2.5em;
+					font-size: 2.1em;
 					color: $green;
 					transition: .5s;
 					position: relative;
@@ -119,7 +116,7 @@ body{
 		}
 		.container_ShowCategories_Bttn-M{
 			@include text;
-			font-size: 2.2em;
+			font-size: 1.7em;
 			color: white;
 			font-weight: bold;
 			cursor: default;
@@ -132,7 +129,7 @@ body{
 			@include text;
 			z-index: 100;
 			text-transform: uppercase;
-			font-size: 2.2em;
+			font-size: 1.7em;
 			color: $green;
 			font-weight: bold;
 			cursor: default;
@@ -145,6 +142,7 @@ body{
 		}
 	}/*FRONT CONTAINER*/
 }
+/////////////////////////////////////
 .container_Categories{
 	z-index: 100;
 	width: 100%;
@@ -154,7 +152,6 @@ body{
 	bottom: 0;
 	translate: -100%;
 	position: absolute;		
-	justify-content: flex-start;
 
 	.container_Categories_BTTClose{
 		width: 100%;
@@ -173,7 +170,7 @@ body{
 		left: 0;
 		right: 0;
 		font-size: .8em;
-		padding: 0 1em;
+		padding: 0 .5em;
 		background: $lightblue;
 		text-align: center;
 	}
@@ -187,6 +184,7 @@ body{
 		display: flex;
 		flex-wrap: wrap;
 		.container_Categories_display_content{
+			padding: .5em;
 			position: relative;		
 			display: flex;
 			flex-direction: column;
@@ -196,8 +194,8 @@ body{
 			
 			.container_Categories_display_Content_IO{
 				transition: .5s;
-				width: 175px;
-				height: 175px;
+				width: 150px;
+				height: 150px;
 				
 				@media screen and (max-width: 480px) {
 					width: 125px;
@@ -226,3 +224,124 @@ body{
 		
 	}
 }
+/////////////////////////////////////////////////////
+.header{
+	width: 100%;
+	background: $lightblue;
+	text-align: center;
+
+	position: sticky;
+	top: 0;
+	z-index: 100;
+	.header_title{	
+		@include titles;
+		font-size: 2em;
+		color: white;
+		margin-right: auto;
+		font-variant: small-caps;
+
+		@media screen and (max-width: 480px) {
+			font-size: 1.4em;
+		}
+	}
+	.titles_container{
+	width: 100%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background: $green;
+	&  .titles_container_title{
+		margin-right: auto;
+	}
+	.titles_container_backlink{
+		@include text;
+		font-variant: small-caps;
+		background: $lightblue;
+		color: white;
+		cursor: default;
+	}
+	.titles_container_title{
+		text-align: center;
+		color: $lightblue;
+		@include text;
+		font-variant: small-caps;
+		cursor: default;
+
+	}
+	
+}
+}
+
+	.container_products{
+		width: 100%;
+		height: 100%;
+
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center; 
+		margin:auto;
+		background: $lightblue;
+
+		.container_products_content{
+
+			background: white;
+			position: relative;
+			height: 285px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin:.2em; 
+			border-bottom:10px solid $green;
+			@media screen and (max-width: 480px) {
+				width: calc(50% - 1em);
+				height: 285px;
+				
+			}
+			.container_products_content_img{
+				width: 50%;
+				height: 50%;
+				position: relative;
+			}
+			.container_products_content_info{
+
+				padding: 0 .5em;
+				margin: .5em;
+				.container_products_content_infotitle{
+					@include text;
+					font-size: 1.2em;
+					padding: 0;
+					font-variant: all-small-caps;
+				}
+				.container_products_content_infoDescription{
+					@include text;
+					padding: 0;
+					font-variant: all-small-caps;
+					font-size: 1em;
+
+				}
+				.container_products_content_infoDescription_Exeptions{
+					@include text;
+					padding: 0;
+					font-variant: all-small-caps;
+					font-size: .9em;
+					color: red;
+				}
+				.container_products_content_info_price{
+					@include text;
+					padding: .2em;
+					font-size: 1.5em;
+					font-variant: small-caps;
+					text-align: center;
+					background: $lightblue;
+					color: white;
+					width: 50%;
+					margin-left: auto;
+
+				}
+
+			}
+
+		}
+	}
