--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,30 @@
 *, a, ul, li {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-decoration: none;
   list-style: none;
   font-family: century Gothic, san-serif;
   font-weight: normal;
+}
+
+@-webkit-keyframes Shake {
+  0% {
+    translate: -10px;
+  }
+  25% {
+    translate: 10px;
+  }
+  50% {
+    translate: -5px;
+  }
+  75% {
+    translate: 5px;
+  }
+  100% {
+    translate: 0px;
+  }
 }
 
 @keyframes Shake {
@@ -26,19 +45,30 @@
   }
 }
 .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100vh;
   background: #1a1b40;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   /*FRONT CONTAINER*/
 }
 .container .container_Info {
   width: 70%;
   text-align: left;
   height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   background: #1A1B40;
@@ -50,10 +80,19 @@
 }
 .container .container_Info .container_Info_Box {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
 }
 .container .container_Info .container_Info_Box .container_info_box_tititle {
@@ -85,6 +124,7 @@
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link {
   font-size: 2.1em;
   color: #32db4a;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   position: relative;
   padding: 0;
@@ -99,9 +139,11 @@
   left: 0;
   right: 0;
   bottom: 0;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .container .container_Info .container_Info_Box .container_info_box_Description .container_info_box_Description_link:hover::after {
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   width: 100%;
 }
@@ -136,13 +178,22 @@
 .container .container_ShowCategories {
   width: 100%;
   height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media screen and (max-width: 768px) {
   .container .container_ShowCategories {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 @media screen and (max-width: 480px) {
@@ -198,14 +249,20 @@
 }
 .container_Categories .container_Categories_BTTClose {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 7ch;
   color: white;
   font-family: century gothic;
   cursor: pointer;
-  position: -webkit-sticky;
   position: sticky;
   z-index: 100;
   top: 0;
@@ -219,23 +276,41 @@
 }
 .container_Categories .container_Categories_display {
   width: 100%;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: auto;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content {
-  padding: 0.5em;
+  padding: 1em;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO {
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   width: 150px;
   height: 150px;
@@ -251,28 +326,47 @@
   font-size: 3em;
   padding: 0.5em;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: white;
   font-size: 2em;
   margin: auto;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   color: #fffb00;
 }
 .container_Categories .container_Categories_display .container_Categories_display_content .container_Categories_display_Content_IO_Titles:hover {
-  animation: Shake 0.5s;
-  animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
+  -webkit-animation: Shake 0.5s;
+          animation: Shake 0.5s;
+  -webkit-animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
+          animation-timing-function: cubic-bezier(0.48, 1.01, 0.56, 1.16);
 }
 
 .header {
   width: 100%;
   background: #1A1B40;
   text-align: center;
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 100;
+}
+@media screen and (max-width: 480px) {
+  .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 .header .header_title {
   font-family: Advent Pro, helvetica;
@@ -290,13 +384,16 @@
 }
 .header .titles_container {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #32db4a;
-}
-.header .titles_container .titles_container_title {
-  margin-right: auto;
 }
 .header .titles_container .titles_container_backlink {
   font-family: Advent Pro, Century Gothic;
@@ -318,35 +415,57 @@
   font-variant: small-caps;
   cursor: default;
 }
+.header .titles_container .titles_container_title:nth-child(2) {
+  font-weight: bold;
+  letter-spacing: 5px;
+  font-size: 1.4em;
+}
+.header .titles_container .titles_container_title:nth-child(3) {
+  background: #1A1B40;
+  color: white;
+}
 
 .container_products {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: auto;
   background: #1A1B40;
 }
 .container_products .container_products_content {
+  border-radius: 0.5em;
   background: white;
   position: relative;
   height: 285px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0.2em;
   border-bottom: 10px solid #32db4a;
 }
 @media screen and (max-width: 480px) {
   .container_products .container_products_content {
-    width: calc(50% - 1em);
+    width: calc(60% - 1em);
     height: 285px;
   }
 }
 .container_products .container_products_content .container_products_content_img {
-  width: 50%;
-  height: 50%;
+  width: 65%;
+  height: 65%;
   position: relative;
 }
 .container_products .container_products_content .container_products_content_info {
